[gd_scene load_steps=15 format=3 uid="uid://ctu2x2f7s26xg"]

[ext_resource type="Script" uid="uid://bav7a000nvcui" path="res://Classes/UI_Screens/CustomBoards/pickCustomBoard/previewBoard/preview_board.gd" id="1_2l143"]
[ext_resource type="Theme" uid="uid://bseckuk4rs2ug" path="res://Art/Theme/QuestionBoxTheme.tres" id="2_ti14r"]
[ext_resource type="Theme" uid="uid://dqs6kiraonh5c" path="res://Art/Theme/StyledButtons.tres" id="3_dvbgu"]
[ext_resource type="Theme" uid="uid://dpeodv265m7jd" path="res://Art/Theme/QuestionTileTheme.tres" id="3_ti14r"]
[ext_resource type="Script" uid="uid://luthqih2wcwp" path="res://Classes/LittleAdditions/ScaleableText/scaleable_textl.gd" id="3_yeu84"]
[ext_resource type="PackedScene" uid="uid://c2l4xq6u6cwfr" path="res://Classes/LittleAdditions/Confirm/confirm.tscn" id="5_4mvls"]

[sub_resource type="ImageTexture" id="ImageTexture_dvbgu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ti14r"]
bg_color = Color(0.027451, 0.0705882, 0.388235, 1)
border_width_left = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0431373, 0.0431373, 0.0431373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dvbgu"]
bg_color = Color(0.027451, 0.0705882, 0.388235, 1)
border_width_left = 5
border_width_right = 5
border_color = Color(0.0430392, 0.0430392, 0.0430392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4mvls"]
bg_color = Color(0, 0, 0, 0.188235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yeu84"]
bg_color = Color(0.0150837, 0.0429237, 0.351353, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 2
border_color = Color(0.0253638, 0.0253638, 0.0253638, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3hv5v"]
bg_color = Color(0.027451, 0.0705882, 0.388235, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 2
border_color = Color(0.0253638, 0.0253638, 0.0253638, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fdqmh"]
bg_color = Color(0.0150837, 0.0429237, 0.351353, 1)
border_width_left = 4
border_width_top = 2
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.0253638, 0.0253638, 0.0253638, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4p8tc"]
bg_color = Color(0.027451, 0.0705882, 0.388235, 1)
border_width_left = 4
border_width_top = 2
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.0253638, 0.0253638, 0.0253638, 1)

[node name="PreviewBoard" type="Control"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2l143")

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
theme_override_icons/grabber = SubResource("ImageTexture_dvbgu")
theme_override_icons/h_grabber = SubResource("ImageTexture_dvbgu")
theme_override_icons/v_grabber = SubResource("ImageTexture_dvbgu")

[node name="Panel" type="Panel" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("2_ti14r")
theme_override_styles/panel = SubResource("StyleBoxFlat_ti14r")

[node name="BoardName" type="RichTextLabel" parent="VSplitContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 74
text = "Name Board Here"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_yeu84")
extraSpace = 0.5
metadata/_custom_type_script = "uid://luthqih2wcwp"

[node name="Panel2" type="Panel" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_ti14r")

[node name="StoreCategories" type="HBoxContainer" parent="VSplitContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Category" type="Panel" parent="VSplitContainer/Panel2/StoreCategories"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dvbgu")

[node name="CategoryName" type="RichTextLabel" parent="VSplitContainer/Panel2/StoreCategories/Category"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ti14r")
theme_override_font_sizes/normal_font_size = 157
text = "test"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_yeu84")
extraSpace = 0.9
metadata/_custom_type_script = "uid://luthqih2wcwp"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("3_ti14r")
theme_override_styles/hover = SubResource("StyleBoxFlat_4mvls")

[node name="VSplitContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -59.0
offset_bottom = 44.0
grow_horizontal = 0
theme_override_constants/separation = 0

[node name="Edit" type="Button" parent="VSplitContainer2"]
z_index = 2
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_dvbgu")
theme_override_styles/hover = SubResource("StyleBoxFlat_yeu84")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yeu84")
theme_override_styles/normal = SubResource("StyleBoxFlat_3hv5v")
text = "Edit"

[node name="DeleteBut" type="Button" parent="VSplitContainer2"]
z_index = 2
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_dvbgu")
theme_override_styles/hover = SubResource("StyleBoxFlat_fdqmh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fdqmh")
theme_override_styles/normal = SubResource("StyleBoxFlat_4p8tc")
text = "Delete"

[node name="Confirm" parent="." instance=ExtResource("5_4mvls")]
visible = false

[connection signal="resized" from="VSplitContainer/Panel/BoardName" to="VSplitContainer/Panel/BoardName" method="_on_resized"]
[connection signal="resized" from="VSplitContainer/Panel2/StoreCategories/Category/CategoryName" to="VSplitContainer/Panel2/StoreCategories/Category/CategoryName" method="_on_resized"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VSplitContainer2/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="VSplitContainer2/DeleteBut" to="Confirm" method="requested"]
[connection signal="confirmed" from="Confirm" to="." method="_on_delete_but_pressed"]
